2005-12-07 [colin]	1.9.100cvs74

	* src/prefs_toolbar.c
		Gtk fixes, patch by Fabien Vantard

2005-12-07 [colin]	1.9.100cvs73

	* src/action.c
	* src/compose.c
	* src/compose.h
		Fix bug #839 (Quoted text isn't colored after 
		executing an action)
	* src/common/plugin.c
		Require plugins to declare their licence in plugin_licence()
		Refuse to load non-GPL plugins as they'd be illegal (as 
		derived works of Sylpheed-Claws, they must be GPL).
	* src/plugins/clamav/clamav_plugin.c
	* src/plugins/demo/demo.c
	* src/plugins/dillo_viewer/dillo_viewer.c
	* src/plugins/pgpcore/plugin.c
	* src/plugins/pgpinline/plugin.c
	* src/plugins/pgpmime/plugin.c
	* src/plugins/spamassassin/spamassassin.c
	* src/plugins/trayicon/trayicon.c
		Add plugin_licence()

2005-12-07 [paul]	1.9.100cvs72

	* configure.ac
	* src/mainwindow.c
	* src/manual.c
	* src/manual.h
	* src/common/defs.h
		clean up after local FAQ removal and
		temporary manual removal

2005-12-06 [colin]	1.9.100cvs71

	* configure.ac
	* doc/Makefile.am
	* doc/faq/.cvsignore
	* doc/faq/Makefile.am
	* doc/faq/de/.cvsignore
	* doc/faq/de/Makefile.am
	* doc/faq/de/sylpheed-faq-1.html
	* doc/faq/de/sylpheed-faq-2.html
	* doc/faq/de/sylpheed-faq-3.html
	* doc/faq/de/sylpheed-faq.html
	* doc/faq/en/.cvsignore
	* doc/faq/en/Makefile.am
	* doc/faq/en/sylpheed-faq-1.html
	* doc/faq/en/sylpheed-faq-2.html
	* doc/faq/en/sylpheed-faq-3.html
	* doc/faq/en/sylpheed-faq-4.html
	* doc/faq/en/sylpheed-faq.html
	* doc/faq/es/.cvsignore
	* doc/faq/es/Makefile.am
	* doc/faq/es/sylpheed-faq-1.html
	* doc/faq/es/sylpheed-faq-2.html
	* doc/faq/es/sylpheed-faq-3.html
	* doc/faq/es/sylpheed-faq-4.html
	* doc/faq/es/sylpheed-faq.html
	* doc/faq/fr/.cvsignore
	* doc/faq/fr/Makefile.am
	* doc/faq/fr/sylpheed-faq-1.html
	* doc/faq/fr/sylpheed-faq-2.html
	* doc/faq/fr/sylpheed-faq-3.html
	* doc/faq/fr/sylpheed-faq.html
	* doc/faq/it/.cvsignore
	* doc/faq/it/Makefile.am
	* doc/faq/it/sylpheed-faq-1.html
	* doc/faq/it/sylpheed-faq-2.html