@@ -1058,3 +1058,4 @@
 ( cvs diff -u -r 1.654.2.1101 -r 1.654.2.1102 configure.ac;  cvs diff -u -r 1.274.2.79 -r 1.274.2.80 src/mainwindow.c;  cvs diff -u -r 1.11.2.3 -r 1.11.2.4 src/manual.c;  cvs diff -u -r 1.8.2.1 -r 1.8.2.2 src/manual.h;  cvs diff -u -r 1.9.2.19 -r 1.9.2.20 src/common/defs.h;  ) > 1.9.100cvs72.patchset
 ( cvs diff -u -r 1.12.2.27 -r 1.12.2.28 src/action.c;  cvs diff -u -r 1.382.2.202 -r 1.382.2.203 src/compose.c;  cvs diff -u -r 1.50.2.16 -r 1.50.2.17 src/compose.h;  cvs diff -u -r 1.13.2.8 -r 1.13.2.9 src/common/plugin.c;  cvs diff -u -r 1.13.2.17 -r 1.13.2.18 src/plugins/clamav/clamav_plugin.c;  cvs diff -u -r 1.13.2.3 -r 1.13.2.4 src/plugins/demo/demo.c;  cvs diff -u -r 1.12.2.8 -r 1.12.2.9 src/plugins/dillo_viewer/dillo_viewer.c;  cvs diff -u -r 1.1.2.3 -r 1.1.2.4 src/plugins/pgpcore/plugin.c;  cvs diff -u -r 1.1.2.4 -r 1.1.2.5 src/plugins/pgpinline/plugin.c;  cvs diff -u -r 1.1.2.13 -r 1.1.2.14 src/plugins/pgpmime/plugin.c;  cvs diff -u -r 1.18.2.14 -r 1.18.2.15 src/plugins/spamassassin/spamassassin.c;  cvs diff -u -r 1.14.2.28 -r 1.14.2.29 src/plugins/trayicon/trayicon.c;  ) > 1.9.100cvs73.patchset
 ( cvs diff -u -r 1.30.2.20 -r 1.30.2.21 src/prefs_toolbar.c;  ) > 1.9.100cvs74.patchset
+( cvs diff -u -r 1.204.2.70 -r 1.204.2.71 src/prefs_common.c;  cvs diff -u -r 1.103.2.37 -r 1.103.2.38 src/prefs_common.h;  cvs diff -u -r 1.2.2.16 -r 1.2.2.17 src/gtk/filesel.c;  ) > 1.9.100cvs75.patchset
