@@ -1,3 +1,10 @@
+2005-12-08 [paul]	1.9.100cvs75
+
+	* src/prefs_common.c
+	* src/prefs_common.h
+	* src/gtk/filesel.c
+		remember load attachment dir
+
 2005-12-07 [colin]	1.9.100cvs74
 
 	* src/prefs_toolbar.c
